updating dotfiles to work as of today with debian 13

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-.vagrant
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Vagrant
+.vagrant/
+*.box
+
+# Temporary files
+*.swp
+*.swo
+*~
+.*.swp
+
+# Downloaded archives
+*.zip
+*.tar.gz
+*.tgz
+
+# Build artifacts
+/go/
+master.zip
+dotfiles-master/
